parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    O
    POTENCIA
    Y

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA LLAVIZQ list_decl list_sent LLAVDER
Rule 2     list_decl -> list_decl decl
Rule 3     list_decl -> decl
Rule 4     list_decl -> empty
Rule 5     decl -> tipo list_id PUNTOCOMA
Rule 6     tipo -> ENTERO
Rule 7     tipo -> FLOTANTE
Rule 8     tipo -> BOOLEANO
Rule 9     list_id -> list_id COMA ID
Rule 10    list_id -> ID
Rule 11    list_sent -> list_sent sent
Rule 12    list_sent -> sent
Rule 13    list_sent -> empty
Rule 14    sent -> sent_if
Rule 15    sent -> sent_while
Rule 16    sent -> sent_do
Rule 17    sent -> sent_read
Rule 18    sent -> sent_write
Rule 19    sent -> bloque
Rule 20    sent -> sent_assign
Rule 21    sent -> sent_break
Rule 22    sent_if -> SI PARIZQ exp_bool PARDER bloque SINO bloque FSI
Rule 23    sent_if -> SI PARIZQ exp_bool PARDER bloque FSI
Rule 24    sent_while -> MIENTRAS PARIZQ exp_bool PARDER bloque
Rule 25    sent_do -> HACER bloque HASTA PARIZQ exp_bool PARDER PUNTOCOMA
Rule 26    sent_read -> LEER ID PUNTOCOMA
Rule 27    sent_write -> ESCRIBIR exp_bool PUNTOCOMA
Rule 28    bloque -> LLAVIZQ list_sent LLAVDER
Rule 29    sent_assign -> ID ASIGNACION exp_bool PUNTOCOMA
Rule 30    sent_break -> BREAK PUNTOCOMA
Rule 31    exp_bool -> exp_bool OR comb
Rule 32    exp_bool -> comb
Rule 33    comb -> comb AND igualdad
Rule 34    comb -> igualdad
Rule 35    igualdad -> igualdad IGUAL rel
Rule 36    igualdad -> igualdad DISTINTO rel
Rule 37    igualdad -> rel
Rule 38    rel -> expr op_rel expr
Rule 39    rel -> expr
Rule 40    op_rel -> MENOR
Rule 41    op_rel -> MENORIGUAL
Rule 42    op_rel -> MAYOR
Rule 43    op_rel -> MAYORIGUAL
Rule 44    expr -> expr SUMA term
Rule 45    expr -> expr RESTA term
Rule 46    expr -> term
Rule 47    term -> term MULT unario
Rule 48    term -> term DIV unario
Rule 49    term -> unario
Rule 50    unario -> NO unario
Rule 51    unario -> RESTA unario
Rule 52    unario -> factor
Rule 53    factor -> PARIZQ exp_bool PARDER
Rule 54    factor -> ID
Rule 55    factor -> NUMERO
Rule 56    factor -> VERDADERO
Rule 57    factor -> FALSO
Rule 58    empty -> <empty>

Terminals, with rules where they appear

AND                  : 33
ASIGNACION           : 29
BOOLEANO             : 8
BREAK                : 30
COMA                 : 9
DISTINTO             : 36
DIV                  : 48
ENTERO               : 6
ESCRIBIR             : 27
FALSO                : 57
FLOTANTE             : 7
FSI                  : 22 23
HACER                : 25
HASTA                : 25
ID                   : 9 10 26 29 54
IGUAL                : 35
LEER                 : 26
LLAVDER              : 1 28
LLAVIZQ              : 1 28
MAYOR                : 42
MAYORIGUAL           : 43
MENOR                : 40
MENORIGUAL           : 41
MIENTRAS             : 24
MULT                 : 47
NO                   : 50
NUMERO               : 55
O                    : 
OR                   : 31
PARDER               : 22 23 24 25 53
PARIZQ               : 22 23 24 25 53
POTENCIA             : 
PROGRAMA             : 1
PUNTOCOMA            : 5 25 26 27 29 30
RESTA                : 45 51
SI                   : 22 23
SINO                 : 22
SUMA                 : 44
VERDADERO            : 56
Y                    : 
error                : 

Nonterminals, with rules where they appear

bloque               : 19 22 22 23 24 25
comb                 : 31 32 33
decl                 : 2 3
empty                : 4 13
exp_bool             : 22 23 24 25 27 29 31 53
expr                 : 38 38 39 44 45
factor               : 52
igualdad             : 33 34 35 36
list_decl            : 1 2
list_id              : 5 9
list_sent            : 1 11 28
op_rel               : 38
programa             : 0
rel                  : 35 36 37
sent                 : 11 12
sent_assign          : 20
sent_break           : 21
sent_do              : 16
sent_if              : 14
sent_read            : 17
sent_while           : 15
sent_write           : 18
term                 : 44 45 46 47 48
tipo                 : 5
unario               : 47 48 49 50 51

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA LLAVIZQ list_decl list_sent LLAVDER

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . LLAVIZQ list_decl list_sent LLAVDER

    LLAVIZQ         shift and go to state 3


state 3

    (1) programa -> PROGRAMA LLAVIZQ . list_decl list_sent LLAVDER
    (2) list_decl -> . list_decl decl
    (3) list_decl -> . decl
    (4) list_decl -> . empty
    (5) decl -> . tipo list_id PUNTOCOMA
    (58) empty -> .
    (6) tipo -> . ENTERO
    (7) tipo -> . FLOTANTE
    (8) tipo -> . BOOLEANO

  ! shift/reduce conflict for ENTERO resolved as shift
  ! shift/reduce conflict for FLOTANTE resolved as shift
  ! shift/reduce conflict for BOOLEANO resolved as shift
    SI              reduce using rule 58 (empty -> .)
    MIENTRAS        reduce using rule 58 (empty -> .)
    HACER           reduce using rule 58 (empty -> .)
    LEER            reduce using rule 58 (empty -> .)
    ESCRIBIR        reduce using rule 58 (empty -> .)
    LLAVIZQ         reduce using rule 58 (empty -> .)
    ID              reduce using rule 58 (empty -> .)
    BREAK           reduce using rule 58 (empty -> .)
    LLAVDER         reduce using rule 58 (empty -> .)
    ENTERO          shift and go to state 8
    FLOTANTE        shift and go to state 9
    BOOLEANO        shift and go to state 10

  ! ENTERO          [ reduce using rule 58 (empty -> .) ]
  ! FLOTANTE        [ reduce using rule 58 (empty -> .) ]
  ! BOOLEANO        [ reduce using rule 58 (empty -> .) ]

    list_decl                      shift and go to state 4
    decl                           shift and go to state 5
    empty                          shift and go to state 6
    tipo                           shift and go to state 7

state 4

    (1) programa -> PROGRAMA LLAVIZQ list_decl . list_sent LLAVDER
    (2) list_decl -> list_decl . decl
    (11) list_sent -> . list_sent sent
    (12) list_sent -> . sent
    (13) list_sent -> . empty
    (5) decl -> . tipo list_id PUNTOCOMA
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . sent_break
    (58) empty -> .
    (6) tipo -> . ENTERO
    (7) tipo -> . FLOTANTE
    (8) tipo -> . BOOLEANO
    (22) sent_if -> . SI PARIZQ exp_bool PARDER bloque SINO bloque FSI
    (23) sent_if -> . SI PARIZQ exp_bool PARDER bloque FSI
    (24) sent_while -> . MIENTRAS PARIZQ exp_bool PARDER bloque
    (25) sent_do -> . HACER bloque HASTA PARIZQ exp_bool PARDER PUNTOCOMA
    (26) sent_read -> . LEER ID PUNTOCOMA
    (27) sent_write -> . ESCRIBIR exp_bool PUNTOCOMA
    (28) bloque -> . LLAVIZQ list_sent LLAVDER
    (29) sent_assign -> . ID ASIGNACION exp_bool PUNTOCOMA
    (30) sent_break -> . BREAK PUNTOCOMA

  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for HACER resolved as shift
  ! shift/reduce conflict for LEER resolved as shift
  ! shift/reduce conflict for ESCRIBIR resolved as shift
  ! shift/reduce conflict for LLAVIZQ resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
    LLAVDER         reduce using rule 58 (empty -> .)
    ENTERO          shift and go to state 8
    FLOTANTE        shift and go to state 9
    BOOLEANO        shift and go to state 10
    SI              shift and go to state 24
    MIENTRAS        shift and go to state 25
    HACER           shift and go to state 26
    LEER            shift and go to state 27
    ESCRIBIR        shift and go to state 29
    LLAVIZQ         shift and go to state 11
    ID              shift and go to state 28
    BREAK           shift and go to state 30

  ! SI              [ reduce using rule 58 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 58 (empty -> .) ]
  ! HACER           [ reduce using rule 58 (empty -> .) ]
  ! LEER            [ reduce using rule 58 (empty -> .) ]
  ! ESCRIBIR        [ reduce using rule 58 (empty -> .) ]
  ! LLAVIZQ         [ reduce using rule 58 (empty -> .) ]
  ! ID              [ reduce using rule 58 (empty -> .) ]
  ! BREAK           [ reduce using rule 58 (empty -> .) ]

    list_sent                      shift and go to state 12
    decl                           shift and go to state 13
    sent                           shift and go to state 14
    empty                          shift and go to state 15
    tipo                           shift and go to state 7
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22
    sent_break                     shift and go to state 23

state 5

    (3) list_decl -> decl .

    ENTERO          reduce using rule 3 (list_decl -> decl .)
    FLOTANTE        reduce using rule 3 (list_decl -> decl .)
    BOOLEANO        reduce using rule 3 (list_decl -> decl .)
    SI              reduce using rule 3 (list_decl -> decl .)
    MIENTRAS        reduce using rule 3 (list_decl -> decl .)
    HACER           reduce using rule 3 (list_decl -> decl .)
    LEER            reduce using rule 3 (list_decl -> decl .)
    ESCRIBIR        reduce using rule 3 (list_decl -> decl .)
    LLAVIZQ         reduce using rule 3 (list_decl -> decl .)
    ID              reduce using rule 3 (list_decl -> decl .)
    BREAK           reduce using rule 3 (list_decl -> decl .)
    LLAVDER         reduce using rule 3 (list_decl -> decl .)


state 6

    (4) list_decl -> empty .

    ENTERO          reduce using rule 4 (list_decl -> empty .)
    FLOTANTE        reduce using rule 4 (list_decl -> empty .)
    BOOLEANO        reduce using rule 4 (list_decl -> empty .)
    SI              reduce using rule 4 (list_decl -> empty .)
    MIENTRAS        reduce using rule 4 (list_decl -> empty .)
    HACER           reduce using rule 4 (list_decl -> empty .)
    LEER            reduce using rule 4 (list_decl -> empty .)
    ESCRIBIR        reduce using rule 4 (list_decl -> empty .)
    LLAVIZQ         reduce using rule 4 (list_decl -> empty .)
    ID              reduce using rule 4 (list_decl -> empty .)
    BREAK           reduce using rule 4 (list_decl -> empty .)
    LLAVDER         reduce using rule 4 (list_decl -> empty .)


state 7

    (5) decl -> tipo . list_id PUNTOCOMA
    (9) list_id -> . list_id COMA ID
    (10) list_id -> . ID

    ID              shift and go to state 32

    list_id                        shift and go to state 31

state 8

    (6) tipo -> ENTERO .

    ID              reduce using rule 6 (tipo -> ENTERO .)


state 9

    (7) tipo -> FLOTANTE .

    ID              reduce using rule 7 (tipo -> FLOTANTE .)


state 10

    (8) tipo -> BOOLEANO .

    ID              reduce using rule 8 (tipo -> BOOLEANO .)


state 11

    (28) bloque -> LLAVIZQ . list_sent LLAVDER
    (11) list_sent -> . list_sent sent
    (12) list_sent -> . sent
    (13) list_sent -> . empty
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . sent_break
    (58) empty -> .
    (22) sent_if -> . SI PARIZQ exp_bool PARDER bloque SINO bloque FSI
    (23) sent_if -> . SI PARIZQ exp_bool PARDER bloque FSI
    (24) sent_while -> . MIENTRAS PARIZQ exp_bool PARDER bloque
    (25) sent_do -> . HACER bloque HASTA PARIZQ exp_bool PARDER PUNTOCOMA
    (26) sent_read -> . LEER ID PUNTOCOMA
    (27) sent_write -> . ESCRIBIR exp_bool PUNTOCOMA
    (28) bloque -> . LLAVIZQ list_sent LLAVDER
    (29) sent_assign -> . ID ASIGNACION exp_bool PUNTOCOMA
    (30) sent_break -> . BREAK PUNTOCOMA

  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for HACER resolved as shift
  ! shift/reduce conflict for LEER resolved as shift
  ! shift/reduce conflict for ESCRIBIR resolved as shift
  ! shift/reduce conflict for LLAVIZQ resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
    LLAVDER         reduce using rule 58 (empty -> .)
    SI              shift and go to state 24
    MIENTRAS        shift and go to state 25
    HACER           shift and go to state 26
    LEER            shift and go to state 27
    ESCRIBIR        shift and go to state 29
    LLAVIZQ         shift and go to state 11
    ID              shift and go to state 28
    BREAK           shift and go to state 30

  ! SI              [ reduce using rule 58 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 58 (empty -> .) ]
  ! HACER           [ reduce using rule 58 (empty -> .) ]
  ! LEER            [ reduce using rule 58 (empty -> .) ]
  ! ESCRIBIR        [ reduce using rule 58 (empty -> .) ]
  ! LLAVIZQ         [ reduce using rule 58 (empty -> .) ]
  ! ID              [ reduce using rule 58 (empty -> .) ]
  ! BREAK           [ reduce using rule 58 (empty -> .) ]

    list_sent                      shift and go to state 33
    sent                           shift and go to state 14
    empty                          shift and go to state 15
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22
    sent_break                     shift and go to state 23

state 12

    (1) programa -> PROGRAMA LLAVIZQ list_decl list_sent . LLAVDER
    (11) list_sent -> list_sent . sent
    (14) sent -> . sent_if
    (15) sent -> . sent_while
    (16) sent -> . sent_do
    (17) sent -> . sent_read
    (18) sent -> . sent_write
    (19) sent -> . bloque
    (20) sent -> . sent_assign
    (21) sent -> . sent_break
    (22) sent_if -> . SI PARIZQ exp_bool PARDER bloque SINO bloque FSI
    (23) sent_if -> . SI PARIZQ exp_bool PARDER bloque FSI
    (24) sent_while -> . MIENTRAS PARIZQ exp_bool PARDER bloque
    (25) sent_do -> . HACER bloque HASTA PARIZQ exp_bool PARDER PUNTOCOMA
    (26) sent_read -> . LEER ID PUNTOCOMA
    (27) sent_write -> . ESCRIBIR exp_bool PUNTOCOMA
    (28) bloque -> . LLAVIZQ list_sent LLAVDER
    (29) sent_assign -> . ID ASIGNACION exp_bool PUNTOCOMA
    (30) sent_break -> . BREAK PUNTOCOMA

    LLAVDER         shift and go to state 34
    SI              shift and go to state 24
    MIENTRAS        shift and go to state 25
    HACER           shift and go to state 26
    LEER            shift and go to state 27
    ESCRIBIR        shift and go to state 29
    LLAVIZQ         shift and go to state 11
    ID              shift and go to state 28
    BREAK           shift and go to state 30

    sent                           shift and go to state 35
    sent_if                        shift and go to state 16
    sent_while                     shift and go to state 17
    sent_do                        shift and go to state 18
    sent_read                      shift and go to state 19
    sent_write                     shift and go to state 20
    bloque                         shift and go to state 21
    sent_assign                    shift and go to state 22
    sent_break                     shift and go to state 23

state 13

    (2) list_decl -> list_decl decl .

    ENTERO          reduce using rule 2 (list_decl -> list_decl decl .)
    FLOTANTE        reduce using rule 2 (list_decl -> list_decl decl .)
    BOOLEANO        reduce using rule 2 (list_decl -> list_decl decl .)
    SI              reduce using rule 2 (list_decl -> list_decl decl .)
    MIENTRAS        reduce using rule 2 (list_decl -> list_decl decl .)
    HACER           reduce using rule 2 (list_decl -> list_decl decl .)
    LEER            reduce using rule 2 (list_decl -> list_decl decl .)
    ESCRIBIR        reduce using rule 2 (list_decl -> list_decl decl .)
    LLAVIZQ         reduce using rule 2 (list_decl -> list_decl decl .)
    ID              reduce using rule 2 (list_decl -> list_decl decl .)
    BREAK           reduce using rule 2 (list_decl -> list_decl decl .)
    LLAVDER         reduce using rule 2 (list_decl -> list_decl decl .)


state 14

    (12) list_sent -> sent .

    LLAVDER         reduce using rule 12 (list_sent -> sent .)
    SI              reduce using rule 12 (list_sent -> sent .)
    MIENTRAS        reduce using rule 12 (list_sent -> sent .)
    HACER           reduce using rule 12 (list_sent -> sent .)
    LEER            reduce using rule 12 (list_sent -> sent .)
    ESCRIBIR        reduce using rule 12 (list_sent -> sent .)
    LLAVIZQ         reduce using rule 12 (list_sent -> sent .)
    ID              reduce using rule 12 (list_sent -> sent .)
    BREAK           reduce using rule 12 (list_sent -> sent .)


state 15

    (13) list_sent -> empty .

    LLAVDER         reduce using rule 13 (list_sent -> empty .)
    SI              reduce using rule 13 (list_sent -> empty .)
    MIENTRAS        reduce using rule 13 (list_sent -> empty .)
    HACER           reduce using rule 13 (list_sent -> empty .)
    LEER            reduce using rule 13 (list_sent -> empty .)
    ESCRIBIR        reduce using rule 13 (list_sent -> empty .)
    LLAVIZQ         reduce using rule 13 (list_sent -> empty .)
    ID              reduce using rule 13 (list_sent -> empty .)
    BREAK           reduce using rule 13 (list_sent -> empty .)


state 16

    (14) sent -> sent_if .

    LLAVDER         reduce using rule 14 (sent -> sent_if .)
    SI              reduce using rule 14 (sent -> sent_if .)
    MIENTRAS        reduce using rule 14 (sent -> sent_if .)
    HACER           reduce using rule 14 (sent -> sent_if .)
    LEER            reduce using rule 14 (sent -> sent_if .)
    ESCRIBIR        reduce using rule 14 (sent -> sent_if .)
    LLAVIZQ         reduce using rule 14 (sent -> sent_if .)
    ID              reduce using rule 14 (sent -> sent_if .)
    BREAK           reduce using rule 14 (sent -> sent_if .)


state 17

    (15) sent -> sent_while .

    LLAVDER         reduce using rule 15 (sent -> sent_while .)
    SI              reduce using rule 15 (sent -> sent_while .)
    MIENTRAS        reduce using rule 15 (sent -> sent_while .)
    HACER           reduce using rule 15 (sent -> sent_while .)
    LEER            reduce using rule 15 (sent -> sent_while .)
    ESCRIBIR        reduce using rule 15 (sent -> sent_while .)
    LLAVIZQ         reduce using rule 15 (sent -> sent_while .)
    ID              reduce using rule 15 (sent -> sent_while .)
    BREAK           reduce using rule 15 (sent -> sent_while .)


state 18

    (16) sent -> sent_do .

    LLAVDER         reduce using rule 16 (sent -> sent_do .)
    SI              reduce using rule 16 (sent -> sent_do .)
    MIENTRAS        reduce using rule 16 (sent -> sent_do .)
    HACER           reduce using rule 16 (sent -> sent_do .)
    LEER            reduce using rule 16 (sent -> sent_do .)
    ESCRIBIR        reduce using rule 16 (sent -> sent_do .)
    LLAVIZQ         reduce using rule 16 (sent -> sent_do .)
    ID              reduce using rule 16 (sent -> sent_do .)
    BREAK           reduce using rule 16 (sent -> sent_do .)


state 19

    (17) sent -> sent_read .

    LLAVDER         reduce using rule 17 (sent -> sent_read .)
    SI              reduce using rule 17 (sent -> sent_read .)
    MIENTRAS        reduce using rule 17 (sent -> sent_read .)
    HACER           reduce using rule 17 (sent -> sent_read .)
    LEER            reduce using rule 17 (sent -> sent_read .)
    ESCRIBIR        reduce using rule 17 (sent -> sent_read .)
    LLAVIZQ         reduce using rule 17 (sent -> sent_read .)
    ID              reduce using rule 17 (sent -> sent_read .)
    BREAK           reduce using rule 17 (sent -> sent_read .)


state 20

    (18) sent -> sent_write .

    LLAVDER         reduce using rule 18 (sent -> sent_write .)
    SI              reduce using rule 18 (sent -> sent_write .)
    MIENTRAS        reduce using rule 18 (sent -> sent_write .)
    HACER           reduce using rule 18 (sent -> sent_write .)
    LEER            reduce using rule 18 (sent -> sent_write .)
    ESCRIBIR        reduce using rule 18 (sent -> sent_write .)
    LLAVIZQ         reduce using rule 18 (sent -> sent_write .)
    ID              reduce using rule 18 (sent -> sent_write .)
    BREAK           reduce using rule 18 (sent -> sent_write .)


state 21

    (19) sent -> bloque .

    LLAVDER         reduce using rule 19 (sent -> bloque .)
    SI              reduce using rule 19 (sent -> bloque .)
    MIENTRAS        reduce using rule 19 (sent -> bloque .)
    HACER           reduce using rule 19 (sent -> bloque .)
    LEER            reduce using rule 19 (sent -> bloque .)
    ESCRIBIR        reduce using rule 19 (sent -> bloque .)
    LLAVIZQ         reduce using rule 19 (sent -> bloque .)
    ID              reduce using rule 19 (sent -> bloque .)
    BREAK           reduce using rule 19 (sent -> bloque .)


state 22

    (20) sent -> sent_assign .

    LLAVDER         reduce using rule 20 (sent -> sent_assign .)
    SI              reduce using rule 20 (sent -> sent_assign .)
    MIENTRAS        reduce using rule 20 (sent -> sent_assign .)
    HACER           reduce using rule 20 (sent -> sent_assign .)
    LEER            reduce using rule 20 (sent -> sent_assign .)
    ESCRIBIR        reduce using rule 20 (sent -> sent_assign .)
    LLAVIZQ         reduce using rule 20 (sent -> sent_assign .)
    ID              reduce using rule 20 (sent -> sent_assign .)
    BREAK           reduce using rule 20 (sent -> sent_assign .)


state 23

    (21) sent -> sent_break .

    LLAVDER         reduce using rule 21 (sent -> sent_break .)
    SI              reduce using rule 21 (sent -> sent_break .)
    MIENTRAS        reduce using rule 21 (sent -> sent_break .)
    HACER           reduce using rule 21 (sent -> sent_break .)
    LEER            reduce using rule 21 (sent -> sent_break .)
    ESCRIBIR        reduce using rule 21 (sent -> sent_break .)
    LLAVIZQ         reduce using rule 21 (sent -> sent_break .)
    ID              reduce using rule 21 (sent -> sent_break .)
    BREAK           reduce using rule 21 (sent -> sent_break .)


state 24

    (22) sent_if -> SI . PARIZQ exp_bool PARDER bloque SINO bloque FSI
    (23) sent_if -> SI . PARIZQ exp_bool PARDER bloque FSI

    PARIZQ          shift and go to state 36


state 25

    (24) sent_while -> MIENTRAS . PARIZQ exp_bool PARDER bloque

    PARIZQ          shift and go to state 37


state 26

    (25) sent_do -> HACER . bloque HASTA PARIZQ exp_bool PARDER PUNTOCOMA
    (28) bloque -> . LLAVIZQ list_sent LLAVDER

    LLAVIZQ         shift and go to state 11

    bloque                         shift and go to state 38

state 27

    (26) sent_read -> LEER . ID PUNTOCOMA

    ID              shift and go to state 39


state 28

    (29) sent_assign -> ID . ASIGNACION exp_bool PUNTOCOMA

    ASIGNACION      shift and go to state 40


state 29

    (27) sent_write -> ESCRIBIR . exp_bool PUNTOCOMA
    (31) exp_bool -> . exp_bool OR comb
    (32) exp_bool -> . comb
    (33) comb -> . comb AND igualdad
    (34) comb -> . igualdad
    (35) igualdad -> . igualdad IGUAL rel
    (36) igualdad -> . igualdad DISTINTO rel
    (37) igualdad -> . rel
    (38) rel -> . expr op_rel expr
    (39) rel -> . expr
    (44) expr -> . expr SUMA term
    (45) expr -> . expr RESTA term
    (46) expr -> . term
    (47) term -> . term MULT unario
    (48) term -> . term DIV unario
    (49) term -> . unario
    (50) unario -> . NO unario
    (51) unario -> . RESTA unario
    (52) unario -> . factor
    (53) factor -> . PARIZQ exp_bool PARDER
    (54) factor -> . ID
    (55) factor -> . NUMERO
    (56) factor -> . VERDADERO
    (57) factor -> . FALSO

    NO              shift and go to state 49
    RESTA           shift and go to state 47
    PARIZQ          shift and go to state 51
    ID              shift and go to state 52
    NUMERO          shift and go to state 53
    VERDADERO       shift and go to state 54
    FALSO           shift and go to state 55

    exp_bool                       shift and go to state 41
    comb                           shift and go to state 42
    igualdad                       shift and go to state 43
    rel                            shift and go to state 44
    expr                           shift and go to state 45
    term                           shift and go to state 46
    unario                         shift and go to state 48
    factor                         shift and go to state 50

state 30

    (30) sent_break -> BREAK . PUNTOCOMA

    PUNTOCOMA       shift and go to state 56


state 31

    (5) decl -> tipo list_id . PUNTOCOMA
    (9) list_id -> list_id . COMA ID

    PUNTOCOMA       shift and go to state 57
    COMA            shift and go to state 58


state 32

    (10) list_id -> ID .

    PUNTOCOMA       reduce using rule 10 (list_id -> ID .)
    COMA            reduce using rule 10 (list_id -> ID .)


state 33
